# backend/src/main/java/or/labos/application/dto/requests/HighestPeakResponse.java
@@ -3,11 +3,12 @@ package or.labos.application.dto.requests;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.hateoas.RepresentationModel;
 
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
-public class HighestPeakResponse {
+public class HighestPeakResponse extends RepresentationModel<HighestPeakResponse> {
 
     private Integer peakID;
     private String peakName;
