# backend/src/main/java/or/labos/application/dto/requests/ParkResponse.java
@@ -1,23 +1,18 @@
-package or.labos.application.dto;
+package or.labos.application.dto.requests;
 
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import or.labos.application.dto.requests.AnimalResponse;
-import or.labos.application.dto.requests.CountyResponse;
-import or.labos.application.dto.requests.HighestPeakResponse;
-import org.springframework.hateoas.Link;
 import org.springframework.hateoas.RepresentationModel;
 
 import java.util.List;
-import java.util.Map;
 
 @Getter
 @Setter
 @AllArgsConstructor
 @NoArgsConstructor
-public class ParkResponseDto extends RepresentationModel<ParkResponseDto>{
+public class ParkResponse extends RepresentationModel<ParkResponse>{
 
     private Integer parkId;
     private String parkName;
